--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -174,17 +174,17 @@
     <h1 class="mui-title">运营管理后台</h1>
 </header>
 <div class="mui-content">
-    <ul class="mui-table-view  mui-grid-view app_notborder app_bnp app_f16">
-        <li class="mui-table-view-cell mui-col-xs-4  text-align-center app_pl0 app_border_rb" id="app_prot0">
+    <ul class="mui-table-view  mui-grid-view app_notborder app_bnp app_f16" id="htmlMenu">
+        <li class="mui-table-view-cell mui-col-xs-4  text-align-center app_pl0 app_border_rb app_prot0">
             <div>
-                <div class="app_icon app_icon_myt0 app_color_myt0 app_pt10 app_f30"></div>
+                <div class="app_icon_myt0 app_color_myt0 app_pt10 app_f30"></div>
                 <div class="app_mt10">我的面板</div>
                 <div class="app_cgray app_mb20"><span>&nbsp;</span></div>
             </div>
         </li>
         <li class="mui-table-view-cell mui-col-xs-4  text-align-center app_pl0 app_border_rb" id="management">
             <div>
-                <div class="app_icon app_color_myt0 app_pt10 app_f30"></div>
+                <div class="app_icon_myt0 app_color_myt0 app_pt10 app_f30"></div>
                 <div class="app_mt10">运营管理</div>
                 <div class="app_cgray app_mb20"><span>&nbsp;</span></div>
             </div>
@@ -199,9 +199,9 @@
 <script src="../js/component/GHutils.js"></script>
 <script src="../js/custom/backstagemgmt.js"></script>
 <script type="text/javascript">
-    $.get('/a/biz/po/bizPoHeader/form4Mobile', {"id":911}, function (data) {
-        console.info(data);
-    });
+//  $.get('/a/biz/po/bizPoHeader/form4Mobile', {"id":911}, function (data) {
+//      console.info(data);
+//  });
 </script>
 </body>
 </html>
