--- a/src/main/webapp/static/mobile/html/applyPay.html
+++ b/src/main/webapp/static/mobile/html/applyPay.html
@@ -20,7 +20,7 @@
 			<p class="app_cf app_nav_text_center">申请支付</p>
 		</header>
 		<div class="mui-content app_content_bgc_phs">
-			<form class="mui-input-group">
+			<form class="mui-input-group" id="appForm">
 			    <div class="mui-input-row"> 
 			        <label>采购单编号：</label>
 			        <input type="text" class="mui-input-clear" id="OrordNum" disabled>
@@ -127,7 +127,7 @@
 			    </div>
 			    <div class="mui-input-row">
 			        <label>申请金额：</label>
-			        <input type="text" class="mui-input-clear" placeholder="必填！">
+			        <input id="planPay" type="text" class="mui-input-clear" placeholder="必填！">
 			    </div>
 			    <div class="mui-input-row">
 				    <div class="mui-input-row">
