--- a/src/main/webapp/static/mobile/html/login.html
+++ b/src/main/webapp/static/mobile/html/login.html
@@ -99,7 +99,7 @@
         }
 
         .mui-input-row label.login-icon {
-            padding: 25px 15px 10px;
+            padding: 7px;
         }
 
         .app_bgcolor {
@@ -112,14 +112,14 @@
             border: none;
             border-radius: 8px;
         }
-
+		.app_login_logo {padding: 0;}
         .mui-input-group div.mui-input-row {
-            height: 60px;
+            height: 40px;
         }
+        .mui-input-group div.mui-input-row input {padding: 10px 15px;}
         .mui-bar-nav~.mui-content.app_content_bgc_login {background-color: #374761;}
-        input:-webkit-autofill, {-webkit-box-shadow: 0 0 0 1000px white inset; }
         .mui-content .form-signin .mui-input-row {background-color: #rgb(250, 255, 189);}
-        .mui-input-row .mui-input-clear~.mui-icon-clear {top: 20px;}
+        .mui-input-row .mui-input-clear~.mui-icon-clear {top: 5px;}
         .app_input_group .mui-input-row span {color: #374761;}
     </style>
 </head>
@@ -130,7 +130,7 @@
 </header>
 <div class="app_content_bgc_login mui-content">
     <div class="app_h60" id="app_title_buttons">
-        <div class="app_h60">
+        <div class="">
             <div class="app_login_logo">
                 <img src="../images/wht-logo.png" alt=""/>
             </div>
@@ -138,28 +138,29 @@
 							WanHuTong
 					</span>
         </div>
+        <form id="loginForm" class="form-signin" action="/a/login?version=mobile" method="post">
+	        <input id="mobileLogin" type="hidden" class="app_login_input mui-input-clear" value="true" name="mobileLogin"/>
+	        <div class="mui-input-group app_input_group steps app_mb30" id="app_stepOne">
+	            <div class="mui-input-row app_mb30">
+	                <label class="login-icon"><span class="mui-icon mui-icon-person"></span></label>
+	                <input id="app-userAcc2" type="text" class="app_login_input mui-input-clear" value="" name="username"
+	                       placeholder="请输入用户名" valid='{"required":true,"tipsbox":"#app_tips_login","msg":"用户名不能为空"}'
+	                       maxlength="32"/>
+	            </div>
+	            <div class="mui-input-row">
+	                <label class="login-icon"><span class="mui-icon mui-icon-locked"></span></label>
+	                <input id="app-userPwd" type="password" class="app_login_input" value="" placeholder="请输入登录密码" name="password"
+	                       valid='{"required":true,"tipsbox":"#app_tips_login","msg":"密码不能为空"}' maxlength="32"/>
+	            </div>
+	        </div>
+	        <div class="app_ml25 app_mr25">
+	            <button id="app-login" type="button" class="mui-btn mui-btn-primary mui-btn-block">
+	                登录
+	            </button>
+	        </div>
+    	</form>
     </div>
-    <form id="loginForm" class="form-signin" action="/a/login?version=mobile" method="post">
-        <input id="mobileLogin" type="hidden" class="app_login_input mui-input-clear" value="true" name="mobileLogin"/>
-        <div class="mui-input-group app_input_group steps app_mb30" id="app_stepOne">
-            <div class="mui-input-row">
-                <label class="login-icon"><span class="mui-icon mui-icon-person"></span></label>
-                <input id="app-userAcc2" type="text" class="app_login_input mui-input-clear" value="" name="username"
-                       placeholder="请输入用户名" valid='{"required":true,"tipsbox":"#app_tips_login","msg":"用户名不能为空"}'
-                       maxlength="32"/>
-            </div>
-            <div class="mui-input-row">
-                <label class="login-icon"><span class="mui-icon mui-icon-locked"></span></label>
-                <input id="app-userPwd" type="password" class="app_login_input" value="" placeholder="请输入登录密码" name="password"
-                       valid='{"required":true,"tipsbox":"#app_tips_login","msg":"密码不能为空"}' maxlength="32"/>
-            </div>
-        </div>
-        <div class="app_ml25 app_mr25">
-            <button id="app-login" type="button" class="mui-btn mui-btn-primary mui-btn-block">
-                登录
-            </button>
-        </div>
-    </form>
+
 </div>
 
 <script src="../js/component/mui.min.js"></script>
