--- a/src/main/webapp/static/mobile/html/check.html
+++ b/src/main/webapp/static/mobile/html/check.html
@@ -129,42 +129,11 @@
 			        <label>审核状态：</label>
 			        <input type="text" class="mui-input-clear">
 			    </div>
-<!--审批流程块 有的话显示-->
+
 				<div class="mui-input-row">
 					<div class="labelLf">审批流程：</div>
-			        <ul class="">
-						<li class="step_item">
-							<div class="step_num">1</div>
-							<div class="step_num_txt">
-								<div class="mui-input-row">
-							        <label>批注：</label>
-							        <textarea name="" rows="" cols=""></textarea>
-							    </div>
-								<br />
-								<div class="mui-input-row">
-							        <label>审批人：</label>
-							        <input type="text" class="mui-input-clear">
-							    	<label>具体时间：</label>
-							        <input type="text" class="mui-input-clear">
-							    </div>
-							</div>
-						</li>
-						<li class="step_item">
-							<div class="step_num">2</div>
-							<div class="step_num_txt">
-								<div class="mui-input-row">
-							        <label>当前状态：</label><!--字体要变成蓝色 #007aff-->
-							        <textarea name="" rows="" cols="">待会计审批</textarea>
-							    </div>
-								<br />
-<!--								<div class="mui-input-row">
-							        <label>审批人：</label>
-							        <input type="text" class="mui-input-clear">
-							    	<label>具体时间：</label>
-							        <input type="text" class="mui-input-clear">
-							    </div>-->
-							</div>
-						</li>
+<!--审核流程--是否显示-->	
+					<ul id="addCheckMen">
 				    </ul>
 				</div>    
 				<div class="app_p20">
