--- a/src/main/webapp/static/mobile/html/check.html
+++ b/src/main/webapp/static/mobile/html/check.html
@@ -12,6 +12,7 @@
 			.mui-input-row label {padding: 14px 14px;}
 			#Date {text-indent: 30px;}
 			.app_p20 button {margin-left: 17%;background-color: #007aff;color: #fff;}
+			.sucessColor {color: #40ABE9;}
 		</style>
 	</head>
 	<body>
@@ -87,7 +88,7 @@
 			        <input type="text" class="mui-input-clear" id="" disabled>
 			    </div>
 <!--附加信息块 有的话显示-->		
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<div class="mui-input-row">
 						<label>产品图片：</label>
 				        <div class="photoList">
@@ -124,7 +125,7 @@
 					        <input type="text" class="mui-input-clear" disabled>
 					    </div>
 				    </div>
-			    </div>
+			    </div>-->
 			    <div class="mui-input-row">
 			        <label>审核状态：</label>
 			        <input type="text" class="mui-input-clear">
@@ -134,6 +135,7 @@
 					<div class="labelLf">审批流程：</div>
 <!--审核流程--是否显示-->	
 					<ul id="addCheckMen">
+						
 				    </ul>
 				</div>    
 				<div class="app_p20">
