--- a/src/main/webapp/static/mobile/html/details.html
+++ b/src/main/webapp/static/mobile/html/details.html
@@ -84,7 +84,7 @@
 			    </div>
 			    
 <!--附加信息块 有的话显示-->		
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<div class="mui-input-row">
 						<label>产品图片：</label>
 				        <div class="photoList">
@@ -121,12 +121,12 @@
 					        <input type="text" class="mui-input-clear" disabled>
 					    </div>
 				    </div>
-			    </div>
+			    </div>-->
 			    
 <!--审批流程块 有的话显示-->
 			    <div class="mui-input-row">
 					<div class="labelLf">审批流程：</div>
-			        <ul class="" id="addCheckMen">
+			        <ul class="" id="addDetailMen">
 				    </ul>
 				</div>    
 			</form>
