--- a/src/main/webapp/static/mobile/html/startCheck.html
+++ b/src/main/webapp/static/mobile/html/startCheck.html
@@ -107,7 +107,7 @@
 			        <input type="text" class="mui-input-clear" id="" disabled>
 			    </div>
 <!--附加信息块 有的话显示-->
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<div class="mui-input-row" id="img">
 						<label>产品图片：</label>
 				        <div class="photoList">
@@ -144,7 +144,7 @@
 					        <input type="text" class="mui-input-clear">
 					    </div>
 				    </div>
-			    </div>
+			    </div>-->
 			    <div class="mui-input-row">
 					<label>是否同时提交支付申请：</label>
 			    	<div id="changeTxt" class="labelri">
@@ -157,7 +157,7 @@
 			    <div class="mui-input-row" id="showMoney">
 				    <div class="mui-input-row">
 				        <label>最后付款时间：</label>
-				        <input id="Date" type="date" name="" />
+				        <input id="lastPayDate" type="date" name="" />
 				    </div>
 				    <div class="mui-input-row">
 				        <label>申请金额：</label>
