--- a/src/main/webapp/static/mobile/html/ApplyPayList.html
+++ b/src/main/webapp/static/mobile/html/ApplyPayList.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>支付申请列表</title>
+		<title>支付单列表</title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link href="../css/app.css" rel="stylesheet" />
     	<style type="text/css">
@@ -11,20 +11,22 @@
 			.mui-content div.ctn_li_h li {height: 30px;}
 			.mui-input-row label {padding: 14px 14px;}
 			#Date {text-indent: 30px;}
-			.app_p20 button {margin-left: 20%;background-color: #0d84f2;}
-			#addBtn>div {border-bottom: 2px solid #40ABE9;}
+			#processAjaxBtn {left: 50%;margin-left: -41px;background-color: #0d84f2;}
+			#addPayListBtn>div {border-bottom: 2px solid #40ABE9;}
+			.hintTxt {font-family: cursive;text-align: center;}
 		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">支付申请列表</p>
+			<p class="app_cf app_nav_text_center">支付单列表</p>
 		</header>
 		<div class="mui-content app_content_bgc_phs">
-			<form id="addBtn" class="mui-input-group">
-				
+			<form id="addPayListBtn" class="mui-input-group">
+
 			</form>
 		</div>	
+		<input id="code" type="hidden" />
 	<div class="clear"></div>
 	
 	<script src="../js/component/mui.min.js"></script>
