--- a/src/main/webapp/static/mobile/html/check.html
+++ b/src/main/webapp/static/mobile/html/check.html
@@ -69,15 +69,15 @@
 			    </div>
 			    <div class="mui-input-row">
 			        <label>供应商卡号：</label>
-			        <input type="text" class="mui-input-clear" id="PoVenBizCard" disabled>
+			        <input type="text" class="mui-input-clear" id="venBizCard" disabled>
 			    </div>
 			    <div class="mui-input-row">
 			        <label>供应商收款人：</label>
-			        <input type="text" class="mui-input-clear" id="PoVenBizPayee" disabled>
+			        <input type="text" class="mui-input-clear" id="venBizPayee" disabled>
 			    </div>
 			    <div class="mui-input-row">
 			        <label>供应商开户行：</label>
-			        <input type="text" class="mui-input-clear" id="PoVenBizBankname" disabled>
+			        <input type="text" class="mui-input-clear" id="venBizBankname" disabled>
 			    </div>
 			    <div class="mui-input-row">
 			        <label>供应商合同：</label>
@@ -139,8 +139,8 @@
 				    </ul>
 				</div>    
 				<div class="app_p20">
-				    <button id='checkBtn' type="submit" class="mui-btn mui-btn-blue">审核通过</button>
-					<button id='rejectBtn' type="submit" class="mui-btn mui-btn-blue">审核驳回</button>
+				    <button id="checkBtn" type="submit" class="mui-btn mui-btn-blue">审核通过</button>
+					<button id="rejectBtn" type="submit" class="mui-btn mui-btn-blue">审核驳回</button>
 				</div>
 			</form>
 		</div>	
