--- a/src/main/webapp/static/mobile/html/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchase.html
@@ -83,10 +83,8 @@
 					</div>
 				</div>  
 			</div>
-			<!--<div id="pageId" style="position: fixed;">
-				
-			</div>-->
 		</div>
+		<input id="applyPayId" class="applyPayId" type="hidden" />
 	<div class="clear"></div>
 	<script src="../js/component/mui.min.js"></script>
 	<script src="../js/component/zepto.min.js"></script>
