--- a/src/main/webapp/static/mobile/html/ApplyPayList.html
+++ b/src/main/webapp/static/mobile/html/ApplyPayList.html
@@ -27,8 +27,9 @@
 
 			</div>
 		</div>	
-		<input id="code" type="hidden" />
+		
 	<div class="clear"></div>
+	<input id="payCodeId" class="payCodeId" type="hidden" />
 	<input id="applyPayId" class="applyPayId" type="hidden" />
 	<input id="applyPayMoney" class="applyPayMoney" type="hidden" />
 	
