--- a/src/main/webapp/static/mobile/html/ApplyPayList.html
+++ b/src/main/webapp/static/mobile/html/ApplyPayList.html
@@ -29,6 +29,7 @@
 		</div>	
 		
 	<div class="clear"></div>
+	<input id="confirmPayId" class="confirmPayId" type="hidden" />
 	<input id="payCodeId" class="payCodeId" type="hidden" />
 	<input id="applyPayId" class="applyPayId" type="hidden" />
 	<input id="applyPayMoney" class="applyPayMoney" type="hidden" />
