--- a/src/main/webapp/static/mobile/html/details.html
+++ b/src/main/webapp/static/mobile/html/details.html
@@ -122,7 +122,14 @@
 					    </div>
 				    </div>
 			    </div>-->
-			    
+			    <div class="mui-input-row">
+			        <label>申请金额：</label>
+			        <input id="planPayDetails" type="text" class="mui-input-clear" placeholder="必填！" disabled>
+			    </div>
+			    <div class="mui-input-row">
+			        <label>本次申请付款时间：</label>
+			        <input id="nowDateDetails" type="text" name="" disabled/>
+			    </div>
 <!--审批流程块 有的话显示-->
 			    <div class="mui-input-row">
 					<div class="labelLf">审批流程：</div>
