--- a/src/main/webapp/static/mobile/html/applyPay.html
+++ b/src/main/webapp/static/mobile/html/applyPay.html
@@ -13,6 +13,7 @@
 			#Date {text-indent: 30px;}
 			#applyPayBtnSubmit {left: 50%;margin-left: -41px;}
 			.sucessColor {color: #40ABE9;}
+			.mui-input-row font {color: red;position: absolute;right: 60px;top: 40%;}
 		</style>
 	</head>
 	<body>
@@ -116,10 +117,12 @@
 			    <div class="mui-input-row">
 			        <label>申请金额：</label>
 			        <input id="planPay" type="text" class="mui-input-clear" placeholder="必填！">
+			        <font>*</font>
 			    </div>
 			    <div class="mui-input-row">
 			        <label>本次申请付款时间：</label>
 			        <input id="nowDate" type="date" name="" />
+			        <font>*</font>
 			    </div>
 <!--审批流程块 有的话显示-->
 			    <div class="mui-input-row">
