--- a/src/main/webapp/static/mobile/html/details.html
+++ b/src/main/webapp/static/mobile/html/details.html
@@ -124,7 +124,7 @@
 			    </div>-->
 			    <div class="mui-input-row">
 			        <label>申请金额：</label>
-			        <input id="planPayDetails" type="text" class="mui-input-clear" placeholder="必填！" disabled>
+			        <input id="planPayDetails" type="text" class="mui-input-clear" disabled>
 			    </div>
 			    <div class="mui-input-row">
 			        <label>本次申请付款时间：</label>
