--- a/src/main/webapp/static/mobile/html/startCheck.html
+++ b/src/main/webapp/static/mobile/html/startCheck.html
@@ -10,7 +10,7 @@
  			.mui-content div.content_part li {padding: 0;list-style: none;}
 			.mui-content div.ctn_li_h li {height: 30px;}
 			.mui-input-row label {padding: 14px 14px;}
-			#Date {text-indent: 30px;}
+			#lastPayDate {text-indent: 10px;}
 			.app_p20 button {margin-left: 20%;background-color: #0d84f2;}
 			#searchIfrom {position: absolute;height: 300px;width: 240px;left: 50%;margin-left: -120px;top: 10%;z-index: 2;background-color: #f9f9f9;border: 1px solid #40ABE9;}
 			#searchTxt {padding: 8px 15px;}
@@ -18,7 +18,7 @@
 			.mui-bar-nav .iconRight {color: #fff;padding: 10px;}
 			.footerBtn {position: absolute;bottom: 0;width: 100%;}
 			.footerBtn button {margin-left: 17%;}
-			.mui-input-row font {color: red;position: absolute;right: 60px;top: 40%;}
+			.mui-input-row font {color: red;position: absolute;right: 60px;top: 30%;}
 		</style>
 	</head>
 	<body>
@@ -163,7 +163,7 @@
 				    </div>
 				    <div class="mui-input-row">
 				        <label>申请金额：</label>
-				        <input type="text" class="mui-input-clear" id="totalMoney" placeholder="必填！">
+				        <input type="text" class="mui-input-clear" id="totalMoney">
 				        <font>*</font>
 				    </div>
 			    </div>
