--- a/src/main/webapp/static/mobile/html/applyPay.html
+++ b/src/main/webapp/static/mobile/html/applyPay.html
@@ -10,10 +10,10 @@
  			.mui-content div.content_part li {padding: 0;list-style: none;}
 			.mui-content div.ctn_li_h li {height: 30px;}
 			.mui-input-row label {padding: 14px 14px;}
-			#Date {text-indent: 30px;}
+			#nowDate {text-indent: 10px;}
 			#applyPayBtnSubmit {left: 50%;margin-left: -41px;}
 			.sucessColor {color: #40ABE9;}
-			.mui-input-row font {color: red;position: absolute;right: 60px;top: 40%;}
+			.mui-input-row font {color: red;position: absolute;right: 60px;top: 30%;}
 		</style>
 	</head>
 	<body>
@@ -116,7 +116,7 @@
 			    </div>-->
 			    <div class="mui-input-row">
 			        <label>申请金额：</label>
-			        <input id="planPay" type="text" class="mui-input-clear" placeholder="必填！">
+			        <input id="planPay" type="text" class="mui-input-clear">
 			        <font>*</font>
 			    </div>
 			    <div class="mui-input-row">
