--- a/src/main/webapp/static/mobile/html/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchase.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<meta charset="utf-8">
+		<!--<meta charset="utf-8">-->
 		<meta name="viewport" content="initial-scale=1, user-scalable=0, minimal-ui" charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
@@ -166,7 +166,7 @@
 		<script src="../js/component/zepto.min.js"></script>
 		<script src="../js/component/mui.min.js"></script>
 		<script src="../js/component/GHutils.js"></script>
-		<script src="../js/component/dropload.min.js"></script>
+		<script src="../js/component/dropload.js"></script>
 		<script src="../js/custom/purchase.js"></script>
 
 	</body>
