--- a/src/main/webapp/static/mobile/html/management.html
+++ b/src/main/webapp/static/mobile/html/management.html
@@ -9,12 +9,13 @@
 	</head>
 	<body>
 		 <header class="mui-bar mui-bar-nav">  
-            <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>  
+            <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
+            <a class="mui-icon mui-icon-bars mui-pull-right app_cf"></a>  
             <h1 class="mui-title">运营管理</h1>  
        	</header> 
 		<div class="mui-content">  
             <div class="mui-card">  
-                <ul class="mui-table-view" id="menuMaget">  
+                <ul class="mui-table-view font-color" id="menuMaget">  
 					
                 </ul>  
             </div>
