--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, user-scalable=0, minimal-ui" charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
-		<title>采购单管理</title>
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css" rel="stylesheet" />
-		<link href="../css/drop.css" rel="stylesheet" />
+		<title>备货单管理</title>
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/drop.css" rel="stylesheet" />
     	<style type="text/css">
 			* {
 				margin: 0;
@@ -141,7 +140,7 @@
 			.dropload-down{
 				display: none;
 			}
-			.mui-content div.content_part li {padding: 0;list-style: none;height: 30px;}
+			.mui-content li {padding: 0;list-style: none;height: 30px;}
  			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
  			.mui-table-view:before {background-color: #FFF;}
  			.listBlue>div {border-bottom: 1px solid #40ABE9;}
@@ -151,23 +150,31 @@
  			#searchBtn {background-color: #374761;padding: 30px;}
 		</style>
 	</head>
-
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 			<!--<span id="search_btn" class="mui-icon mui-icon-bars mui-pull-right app_cf"></span>-->
-		    <p class="app_cf app_nav_text_center">采购单管理</p>
+		    <p class="app_cf app_nav_text_center">备货单管理</p>
 		</header>
 		<div class="content mui-content">
-			<div class="listBlue" id="addBtn">
+			<div class="mui-row app_text_center app_font_cl app_li_text_linhg app_bline">
+		        <div class="mui-col-sm-6 mui-col-xs-6">
+		            <li id="inListAddBtn" class="mui-table-view-cell">备货清单添加</li>
+		        </div>
+		        <div class="mui-col-sm-6 mui-col-xs-6">
+		            <li class="mui-table-view-cell"></li>
+		        </div>
+	        </div>
+	        
+			<div class="inListAdd listBlue">
 				
 			</div>
 		</div>
-		<script src="../js/component/zepto.min.js"></script>
-		<script src="../js/component/mui.min.js"></script>
-		<script src="../js/component/GHutils.js"></script>
-		<script src="../js/component/dropload.js"></script>
-		<script src="../js/custom/purchase.js"></script>
+		<script src="../../js/component/zepto.min.js"></script>
+		<script src="../../js/component/mui.min.js"></script>
+		<script src="../../js/component/GHutils.js"></script>
+		<script src="../../js/component/dropload.js"></script>
+		<script src="../../js/inventoryMagmetJs/inventoryList.js"></script>
 
 	</body>
 
