--- a/src/main/webapp/static/mobile/html/user.html
+++ b/src/main/webapp/static/mobile/html/user.html
@@ -47,9 +47,11 @@
 				</li>
 			</ul>
 			<div class="app_ml25 app_mr25">
-	            <button id="appQuit" type="button" class="mui-btn mui-btn-primary mui-btn-block">
+	            <a href="/a/logout">
+					<button id="appQuit" type="button" class="mui-btn mui-btn-primary mui-btn-block">
 	               	 退出登录
-	            </button>
+	            	</button>
+				</a>
 	        </div>
 		</div>
 		<script src="../js/component/mui.min.js"></script>
