--- a/src/main/webapp/static/mobile/html/login.html
+++ b/src/main/webapp/static/mobile/html/login.html
@@ -168,18 +168,14 @@
 <script src="../js/component/GHutils.js"></script>
 <script src="../js/custom/usermgmt-login.js"></script>
 <script type="text/javascript">
-    function delCookie(name)
-    {
-        var exp = new Date();
-        exp.setTime(exp.getTime() - 1);
-        var cval=getCookie(name);
-        if(cval!=null)
-            document.cookie= name + "="+cval+";expires="+exp.toGMTString();
+    function clearCookie(){
+        var keys=document.cookie.match(/[^ =;]+(?=\=)/g);
+        if (keys) {
+            for (var i = keys.length; i--;)
+                document.cookie=keys[i]+'=0;expires=' + new Date( 0).toUTCString()
+        }
     }
-
-    delCookie("jeesite.session.id");
-    delCookie("JSESSIONID");
-    delCookie("SESSIONID");
+    clearCookie();
 </script>
 </body>
 </html>
